<resources>
    <string name="app_name">catan_android</string>
    <string name="connect_to_game">Connect to Game</string>
    <string name="lobby_button_join">Join</string>
    <string name="lobby_button_create">Create</string>
    <string name="lobby_title">Lobby</string>
    <string name="lobby_playerName_hint">Enter Playername</string>
    <string name="lobby_game_entry_id">no game id</string>
    <string name="lobby_game_entry_players">no player info available</string>
    <string name="lobby_game_entry_idLabel">Game ID: </string>
    <string name="lobby_game_entry_playersLabel">Players: </string>
    <string name="lobby_refresh_button">refresh active games</string>
    <string name="try_reconnect">Try reconnect</string>
    <string name="developmentcard_text_default">No name for card</string>
    <string name="developmentcard_text_knight">Knight</string>
    <string name="developmentcard_text_roadbuilding">Road Building</string>
    <string name="developmentcard_text_yearofplenty">Year of Plenty</string>
    <string name="developmentcard_text_monopoly">Monopoly</string>
    <string name="developmentcard_text_victorypoint">Victory Point</string>
    <string name="confirmationFieldText">Are you sure!?!?!?</string>
    <string name="robberAcceptText">Accept</string>
    <string name="robberDenyText">Deny</string>
</resources>