<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RobberConfirmationFragment">

    <TextView
        android:id="@+id/robberConfirmationTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/confirmationFieldText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/robberConfirmationTextField"
        android:layout_marginTop="32dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:text="@string/robberAcceptText" />

    <Button
        android:id="@+id/button_deny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/robberConfirmationTextField"
        android:layout_marginTop="32dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:text="@string/robberDenyText" />

</RelativeLayout>
