<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lobby"
    tools:context=".lobbyActivity">

    <TextView
        android:id="@+id/LobbyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/lobby_title"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LobbyPlayerNameEditText"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/lobby_playerName_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/LobbyJoinButton"
        style="@style/ButtonStyle"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/lobby_button_join"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LobbyPlayerNameEditText" />

    <Button
        android:id="@+id/LobbyCreateButton"
        style="@style/ButtonStyle"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/lobby_button_create"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LobbyJoinButton" />

    <ImageButton
        android:id="@+id/LobbyRefreshButton"
        style="@style/ImageButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/lobby_refresh_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_refresh" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/LobbyGameRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/LobbyPlayerNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LobbyTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>